--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,1 +1,1 @@
-<p class='footer'>*Sitio desarrollado por BrillantWebsites.com @derechos reservados 2022</p>
+<p class='footer'>Sitio en desarrollo con node y hbs</p>
