--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -3,8 +3,11 @@
     <meta charset='UTF-8' />
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+    <link rel='stylesheet' type='text/css' href='./public/reset.css' />
     <link rel='stylesheet' type='text/css' href='./public/styles.css' />
-    <title>Document</title>
+    <script src='/socket.io/socket.io.js'></script>
+    <script src='/public/index.js'></script>
+    <title>Web app</title>
   </head>
   <body>
     {{{body}}}
