--- a/views/partials/chatForm.hbs
+++ b/views/partials/chatForm.hbs
@@ -2,10 +2,45 @@
   <form id='chatForm' class='chat-form'>
     <input
       type='email'
-      name='user'
-      id='user'
+      name='mail'
+      id='mail'
       class='chat-input'
       placeholder='example@example.com'
+    />
+    <input
+      type='text'
+      name='name'
+      id='name'
+      class='chat-input'
+      placeholder='Ingrese su nombre'
+    />
+    <input
+      type='text'
+      name='surname'
+      id='surname'
+      class='chat-input'
+      placeholder='Ingrese su apellido'
+    />
+    <input
+      type='number'
+      name='age'
+      id='age'
+      class='chat-input'
+      placeholder='Ingrese su edad'
+    />
+    <input
+      type='text'
+      name='alias'
+      id='alias'
+      class='chat-input'
+      placeholder='Ingrese su alias'
+    />
+    <input
+      type='text'
+      name='avatar'
+      id='avatar'
+      class='chat-input'
+      value='https://www.thesprucepets.com/thmb/oj1r_NXKRdZ8yLZIWBoj2j_U7yw=/420x0/filters:no_upscale():max_bytes(150000):strip_icc()/GettyImages-145577979-d97e955b5d8043fd96747447451f78b7.jpg'
     />
     <input
       type='text'
