--- a/views/partials/loginError.hbs
+++ b/views/partials/loginError.hbs
@@ -1,6 +1,6 @@
 <div class='login-error'>
-  <form action='/{{errorAction}}' method='post' class='form-error'>
+  <form action='/{{errorAction}}' method='GET' class='form-error'>
     <h1>{{errorMsg}}</h1>
-    <button type='submit' value='Volver'></button>
+    <button type='submit' class='btn'>Volver</button>
   </form>
 </div>
