--- a/public/styles.css
+++ b/public/styles.css
@@ -155,6 +155,24 @@
   margin: 2rem auto 0;
 }
 
+/* ESTILO DE LA TABLA INFO */
+.div-info {
+  width: 50vw;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 2rem auto;
+  text-align: center;
+}
+.info-table,
+.info-table tr,
+.info-table td {
+  border: solid 1px black;
+}
+.info-table td {
+  padding: 0.1rem;
+}
+
 /* ESTILO DEL FOOTER */
 .footer {
   text-align: center;
