--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -1,14 +1,19 @@
-<html lang='en'>
+<html lang="en">
   <head>
-    <meta charset='UTF-8' />
-    <meta http-equiv='X-UA-Compatible' content='IE=edge' />
-    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <link rel='stylesheet' type='text/css' href='../../public/reset.css' />
-    <link rel='stylesheet' type='text/css' href='../../public/styles.css' />
-    <script src='/socket.io/socket.io.js'></script>
-    <script src='/public/index.js'></script>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="../../public/reset.css" />
+    <link rel="stylesheet" type="text/css" href="../../public/styles.css" />
+    <link
+      rel="icon"
+      href="../../public/images/favicon.ico"
+      type="image/x-icon"
+    />
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/public/index.js"></script>
     <script
-      src='https://cdn.jsdelivr.net/npm/normalizr@3.6.1/dist/normalizr.browser.min.js'
+      src="https://cdn.jsdelivr.net/npm/normalizr@3.6.1/dist/normalizr.browser.min.js"
     ></script>
     <title>Web app</title>
   </head>
