--- a/views/partials/info.hbs
+++ b/views/partials/info.hbs
@@ -30,5 +30,9 @@
       <td>Carpeta del proyecto</td>
       <td>{{data.FOLDER}}</td>
     </tr>
+    <tr>
+      <td>Numero de cpus</td>
+      <td>{{data.numCPUs}}</td>
+    </tr>
   </table>
 </div>
