--- a/views/partials/productsList.hbs
+++ b/views/partials/productsList.hbs
@@ -3,7 +3,7 @@
     <p>{{this.title}}</p>
     <p>{{this.price}}</p>
     <img src='{{this.thumbnail}}' class='product-img' />
-    <form action='/cart/product/{{this.id}}' method='POST'>
+    <form action='cart/product/{{this.id}}' method='POST'>
       <button type='submit'>Agregar</button>
     </form>
   </div>
