--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,7 +1,7 @@
 <ul class='navbar'>
   <li>
     {{#if logued}}
-      <a href='/api/products-test'>Inicio</a>
+      <a href='/products'>Inicio</a>
       <a href='/profile'>Perfil</a>
       <a href='/cart'>
         <img
