--- a/views/partials/loginForm.hbs
+++ b/views/partials/loginForm.hbs
@@ -3,7 +3,7 @@
     <h1 class='login-title'>Ingresar</h1>
     <form action='/login' method='POST' class='login-form'>
       <input
-        type='text'
+        type='email'
         name='email'
         id='email'
         class='form-input'
