--- a/views/partials/signUpForm.hbs
+++ b/views/partials/signUpForm.hbs
@@ -8,7 +8,7 @@
       enctype='multipart/form-data'
     >
       <input
-        type='text'
+        type='email'
         name='email'
         id='email'
         class='form-input'
