--- a/views/mainProducts.hbs
+++ b/views/mainProducts.hbs
@@ -2,10 +2,18 @@
 
 {{>loginMsg name=name}}
 
+{{>categoryFilter}}
+
+{{#if isAdmin}}
+  <form action="/productos/create" method='get'>
+  <button type="submit" class='btn'>Crear producto</button>
+  </form>
+{{/if}}
+
 <div class='products-container'>
   <h1 class='products-title'>Listado de productos</h1>
   <div id='products-list' class='products-list'>
-    {{>productsList productsData=productsData}}
+    {{>productsList data=.}}
   </div>
 </div>
 
