--- a/views/partials/cartList.hbs
+++ b/views/partials/cartList.hbs
@@ -2,14 +2,14 @@
   <div class='cart-product'>
     <p>{{this.title}}</p>
     <p>${{this.price}}</p>
-    <form action='/cart/{{this.id}}' method='post'>
+    <form action='/carrito/{{this.id}}' method='post'>
       <button type='submit' class='btn'>Eliminar</button>
     </form>
   </div>
 {{/each}}
 <div class='cart-price'>
   <h2>Total: ${{cart.total}}</h2>
-  <form action='/cart' method='POST'>
+  <form action='/carrito' method='POST'>
     <button type='submit' class='btn'>Comprar</button>
   </form>
   {{! <button type='submit' class='btn'>Vaciar carrito</button> }}
