--- a/views/partials/productsList.hbs
+++ b/views/partials/productsList.hbs
@@ -1,10 +1,67 @@
-{{#each productsData}}
-  <div class='prod-container'>
-    <p>{{this.title}}</p>
-    <p>{{this.price}}</p>
-    <img src='{{this.thumbnail}}' class='product-img' />
-    <form action='cart/product/{{this.id}}' method='POST'>
-      <button type='submit'>Agregar</button>
-    </form>
-  </div>
-{{/each}}
+{{#with data}}
+  {{#if isAdmin}}
+    {{#each productsData}}
+      <div class="card">
+        <p>{{this.title}}</p>
+        <p>${{this.price}}</p>
+        <img src="{{this.thumbnail}}" class="product-img" />
+        <div class="prodBtn-container">
+          <form action="productos/prod/{{this.id}}" method="post">
+            <button class="btn" type="submit">Ver</button>
+          </form>
+          <form action="carrito/{{this.id}}">
+            <button class="btn" type="submit">Agregar</button>
+          </form>
+          </div>
+          <div class="prodBtn-container">
+          <form
+            action="/productos/edit/{{this.id}}"
+            onsubmit="updateProd({{this.id}})"
+          >
+            <button class="btn" type="submit">Editar</button>
+          </form>
+          <form
+            action="/productos"
+            id="deleteForm"
+            onsubmit="deleteProd(id)"
+          >
+            <input type="hidden" name="id" id="id" value="{{this.id}}">
+            <button class="btn" type="submit">Eliminar</button>
+          </form>
+        </div>
+      </div>
+    {{/each}}
+  {{else}}
+    {{#each productsData}}
+      <div class="card">
+        <p>{{this.title}}</p>
+        <p>${{this.price}}</p>
+        <img src="{{this.thumbnail}}" class="product-img" />
+        <div class="prodBtn-container">
+          <form action="productos/prod/{{this.id}}">
+            <button class="btn" type="submit">Ver</button>
+          </form>
+          <form action="carrito/{{this.id}}">
+            <button class="btn" type="submit">Agregar</button>
+          </form>
+        </div>
+      </div>
+    {{/each}}
+  {{/if}}
+{{/with}}
+
+<script>
+  function deleteProd(id) {
+    const URL = "http://" + window.location.host + "/productos/" + id.value
+    const token = localStorage.getItem("token")
+    var requestOptions = {
+      method: "DELETE",
+      headers: {"Authorization": `Bearer ${token}`,},
+      redirect: "follow"
+    };  
+    fetch(URL, requestOptions)
+      .then(response => response.text())
+      .then(result => console.log(result))
+      .catch(error => console.log("error", error));
+  }
+</script>
