--- a/views/partials/signUpForm.hbs
+++ b/views/partials/signUpForm.hbs
@@ -22,6 +22,13 @@
         placeholder='Contraseña'
       />
       <input
+        type='password'
+        name='secondPass'
+        id='secondPass'
+        class='form-input'
+        placeholder='Repita su contraseña'
+      />
+      <input
         type='text'
         name='name'
         id='name'
