--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -3,14 +3,19 @@
     {{#if logued}}
       <a href='/productos'>Inicio</a>
       <a href='/profile'>Perfil</a>
-      <a href='/cart'>
+      <a href='/carrito'>
         <img
           src='/public/images/cart.png'
           alt='cart'
           style='width: 2rem;vertical-align: bottom;'
         /></a>
-    {{else}}
-      <a href='/login'>Inicio</a>
-    {{/if}}
   </li>
+      <form action='/logout' method='POST'>
+        <input type='submit' value='Desloguear' class='navbar-'></input>
+      </form>
+    {{else}}
+      <li>
+        <a href='/login'>Inicio</a>
+      </li>
+    {{/if}}
 </ul>
