--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -5,6 +5,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <link rel='stylesheet' type='text/css' href='../../public/reset.css' />
     <link rel='stylesheet' type='text/css' href='../../public/styles.css' />
+    <script src='/socket.io/socket.io.js'></script>
     <link
       rel='icon'
       href='../../public/images/favicon.ico'
