--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,21 +1,23 @@
 <ul class='navbar'>
   <li>
-    {{#if logued}}
+    {{#if notLogued}}
+      <li>
+        <a href='/login'>Inicio</a>
+      </li>
+    {{else}}
       <a href='/productos'>Inicio</a>
       <a href='/profile'>Perfil</a>
+      <a href='/chat'>Chat</a>
       <a href='/carrito'>
         <img
           src='/public/images/cart.png'
           alt='cart'
           style='width: 2rem;vertical-align: bottom;'
         /></a>
+
   </li>
       <form action='/logout' method='POST'>
         <input type='submit' value='Desloguear' class='navbar-'></input>
       </form>
-    {{else}}
-      <li>
-        <a href='/login'>Inicio</a>
-      </li>
     {{/if}}
 </ul>
