--- a/public/styles.css
+++ b/public/styles.css
@@ -247,6 +247,35 @@ input::-webkit-inner-spin-button {
   gap: 1rem;
 }
 
+/* ESTILO DE HISTORIAL */
+.history-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 1rem 0;
+}
+.history-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.history {
+  display: flex;
+  gap: 0.5rem;
+}
+.history .admin-email {
+  color: green;
+}
+.history .time {
+  color: red;
+}
+.history .msg {
+  color: black;
+}
+.history .admin {
+  justify-content: flex-end;
+}
+
 /* ESTILO DE PROFILE */
 .profile-table,
 tr,
