--- a/views/partials/categoryFilter.hbs
+++ b/views/partials/categoryFilter.hbs
@@ -1,7 +1,5 @@
-<div class='category'>
-  <ul>
-    <li><a href='/productos/boot'>Botines</a></li>
-    <li><a href='/productos/ball'>Pelotas</a></li>
-    <li><a href='/productos/cup'>Copas</a></li>
-  </ul>
-</div>
+<ul class="category">
+  <li><a href="/productos/boot">Botines</a></li>
+  <li><a href="/productos/ball">Pelotas</a></li>
+  <li><a href="/productos/cup">Copas</a></li>
+</ul>
