--- a/views/partials/info.hbs
+++ b/views/partials/info.hbs
@@ -1,7 +1,7 @@
-<div class='div-info'>
+<div class="div-info">
   <h1>Datos del proyecto</h1>
 
-  <table class='info-table'>
+  <table class="info-table">
     <tr>
       <td>Argumentos de entrada</td>
       <td>{{data.ARGS}}</td>
