--- a/views/partials/loginForm.hbs
+++ b/views/partials/loginForm.hbs
@@ -1,29 +1,29 @@
-<div class='login-div'>
-  <div class='input-div'>
-    <h1 class='login-title'>Ingresar</h1>
-    <form action='/login' method='POST' class='login-form'>
+<div class="login-div">
+  <div class="input-div">
+    <h1 class="login-title">Ingresar</h1>
+    <form action="/login" method="POST" class="login-form">
       <input
-        type='email'
-        name='email'
-        id='email'
-        class='form-input'
-        placeholder='Email'
+        type="email"
+        name="email"
+        id="email"
+        class="form-input"
+        placeholder="Email"
       />
       <input
-        type='password'
-        name='password'
-        id='password'
-        class='form-input'
-        placeholder='Clave'
+        type="password"
+        name="password"
+        id="password"
+        class="form-input"
+        placeholder="Clave"
       />
-      <button type='submit' class='btn'>Ingresar</button>
+      <button type="submit" class="btn">Ingresar</button>
     </form>
   </div>
-  <div class='divisor-div'></div>
-  <div class='redirect-div'>
-    <form action='/signup' method='GET' class='login-form'>
+  <div class="divisor-div"></div>
+  <div class="redirect-div">
+    <form action="/signup" method="GET" class="login-form">
       <p>Registrarse</p>
-      <button type='submit' class='btn'> > </button>
+      <button type="submit" class="btn"> > </button>
     </form>
   </div>
 </div>
