--- a/views/partials/profile.hbs
+++ b/views/partials/profile.hbs
@@ -1,6 +1,6 @@
-<div class='div-info'>
+<div class="div-info">
   <h1>Datos de la cuenta</h1>
-  <table class='profile-table'>
+  <table class="profile-table">
     <tr>
       <td>Email</td>
       <td>{{email}}</td>
@@ -23,9 +23,9 @@
     </tr>
     <tr>
       <td><img
-          src='/public/avatars/{{avatar}}'
-          alt='avatar'
-          class='avatar-img'
+          src="/public/avatars/{{avatar}}"
+          alt="avatar"
+          class="avatar-img"
         /></td>
       <td>{{phone}}</td>
     </tr>
