--- a/public/styles.css
+++ b/public/styles.css
@@ -19,7 +19,31 @@
   color: white;
   font-size: 1.5rem;
 }
+.navbar a:hover,
+.navbar input:hover {
+  color: black;
+}
+/* ESTILO DE CATEGORIAS */
+.category {
+  display: flex;
+  justify-content: center;
+  gap: 5rem;
 
+  background-color: darkorange;
+}
+.category a {
+  color: white;
+  font-weight: bolder;
+  font-size: 1.3rem;
+}
+.category a:hover {
+  color: black;
+}
+.create-prod-btn {
+  display: flex;
+  justify-content: flex-end;
+  margin: 0.5rem 0.5rem 0 0;
+}
 /* ESTILOS DE CONTENEDOR PRODUCTOS */
 .products-title {
   text-align: center;
@@ -30,7 +54,7 @@
   gap: 1rem;
   margin: 1rem 1rem 3rem;
 }
-.prodBtn-container {
+.prod-btn-container {
   display: flex;
   gap: 1rem;
   margin-top: 0.3rem;
@@ -138,11 +162,24 @@
 }
 
 /* ESTILO DEL CART */
+.cart-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 1rem 0;
+}
 .cart-list {
   width: 35vw;
   margin: auto;
   display: flex;
   flex-direction: column;
+  gap: 1rem;
+}
+.cart-price {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  align-items: center;
 }
 .cart-product {
   align-items: center;
@@ -153,6 +190,11 @@
   border-radius: 0 1rem/1rem;
   box-shadow: 0.3rem 0.3rem darkviolet;
   padding: 0.2rem;
+}
+.empty-cart {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* MI BOTON */
@@ -167,6 +209,10 @@
 .btn:hover {
   background-color: grey;
   border: solid grey;
+}
+.violet:hover {
+  background-color: purple;
+  border: solid purple;
 }
 
 /* ESTILO DEL LOGIN */
@@ -228,14 +274,14 @@ input::-webkit-inner-spin-button {
   color: blue;
 }
 .login-error {
-  width: 60vw;
+  width: 45vw;
   display: flex;
-  justify-content: center;
   background-color: gray;
   color: white;
   margin: 2rem auto;
-  padding: 5rem 2rem;
+  padding: 4rem 2rem;
   font-size: 1.3rem;
+  justify-content: center;
 }
 .login-error button {
   font-size: 1.2rem;
@@ -245,6 +291,9 @@ input::-webkit-inner-spin-button {
   flex-direction: column;
   align-items: center;
   gap: 1rem;
+}
+.form-error img {
+  max-width: 13rem;
 }
 
 /* ESTILO DE HISTORIAL */
