--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -1,15 +1,15 @@
-<html lang='en'>
+<html lang="en">
   <head>
-    <meta charset='UTF-8' />
-    <meta http-equiv='X-UA-Compatible' content='IE=edge' />
-    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <link rel='stylesheet' type='text/css' href='../../public/reset.css' />
-    <link rel='stylesheet' type='text/css' href='../../public/styles.css' />
-    <script src='/socket.io/socket.io.js'></script>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="../../public/reset.css" />
+    <link rel="stylesheet" type="text/css" href="../../public/styles.css" />
+    <script src="/socket.io/socket.io.js"></script>
     <link
-      rel='icon'
-      href='../../public/images/favicon.ico'
-      type='image/x-icon'
+      rel="icon"
+      href="../../public/images/favicon.ico"
+      type="image/x-icon"
     />
     <title>Web app</title>
   </head>
