--- a/views/mainProd.hbs
+++ b/views/mainProd.hbs
@@ -1,14 +1,12 @@
 {{>navbar}}
 
-{{>loginMsg name=name}}
-
 {{#if create}}
-  <div class='prodForm-container'>
+  <div class="prodForm-container">
   {{>prodCreateForm}}
   </div>
 {{/if}}
 {{#if edit}}
-  <div class='prodForm-container'>
+  <div class="prodForm-container">
   {{>prodEditForm prod=prod}}
   </div>
 {{/if}}
