--- a/views/partials/logoutMsg.hbs
+++ b/views/partials/logoutMsg.hbs
@@ -1,3 +1,3 @@
-<div class='logout-div'>
-  <h1 class='logout-title'>Hasta luego {{name}}</h1>
+<div class="logout-div">
+  <h1 class="logout-title">Hasta luego {{name}}</h1>
 </div>
