--- a/views/mainChat.hbs
+++ b/views/mainChat.hbs
@@ -1,18 +1,19 @@
 <script src="../public/index.js"></script>
 
-<h1>Chats</h1>
-<br>
+{{>navbar}}
+
+<div class="mainChat">
+  <h1>Chats</h1>
 
 {{#with user}}
-  <a href="/chat/{{this.email}}" class="btn" >Historial</a>
-  <br><br>
-
   {{#if this.isAdmin}}
     <h3>Hola {{this.name}}. Centro de consultas</h3>
   {{else}}
-    <h3>Hola {{this.name}}. ¿Tienes algun problema?</h3>
+    <h3>Hola {{this.name}}. ¿Tienes algun problema? Un administrador le contestara en instantes...</h3>
   {{/if}}
-  <br>
+
+  <a href="/chat/{{this.email}}" class="btn" >Historial</a>
+
   <form onsubmit="return newChat()">
     <input type="hidden" id="email" value="{{this.email}}">
     <input type="hidden" id="admin" value="{{this.isAdmin}}">
@@ -28,13 +29,12 @@
   {{else}}
     <ul id="usersList" style="visibility: hidden;"></ul>
   {{/if}}
-
-
-  <br>
-  <form onsubmit="return sendMsg()" id="msg-form" style="visibility: hidden;">
-    <input type="text" id="message" placeholder="Ingrese su mensaje">
+  <form onsubmit="return sendMsg()" id="msg-form" style="visibility: hidden; display: flex; gap: 1rem;" class="chatForm">
+    <input type="text" id="message" placeholder="Ingrese su mensaje" class="msg">
     <input type="submit" value="Enviar" class="btn">
   </form>
 
   <ul id="messages"></ul>
 {{/with}}
+
+</div>
