--- a/views/mainHistory.hbs
+++ b/views/mainHistory.hbs
@@ -4,22 +4,24 @@
 <h3 style="text-align: center;">Historial de mensajes</h3>
 
 <ul class="history-list">
-{{#each history}}
-  {{#if this.admin}}
-  <li class="history">
-    <p class="admin-email">{{this.email}}</p>
-    <p class="time">[{{this.timestamp}}] :</p>
-    <p class="msg">{{this.message}}</p>
-  </li>
-  {{else}}
-  <li class="history">
-    <p class="email">{{this.email}}</p>
-    <p class="time">[{{this.timestamp}}] :</p>
-    <p class="msg">{{this.message}}</p>
-  </li>
-  {{/if}}
-{{/each}}
+{{#if chat}}
+  {{#each history}}
+    {{#if this.admin}}
+    <li class="history">
+      <p class="admin-email">{{this.email}}</p>
+      <p class="time">[{{this.timestamp}}] :</p>
+      <p class="msg-info">{{this.message}}</p>
+    </li>
+    {{else}}
+    <li class="history">
+      <p class="email">{{this.email}}</p>
+      <p class="time">[{{this.timestamp}}] :</p>
+      <p class="msg-info">{{this.message}}</p>
+    </li>
+    {{/if}}
+  {{/each}}
+{{else}}
+  <p>No tienes mensajes en tu historial...</p>
+{{/if}}
 </ul>
 </div>
-
-{{>footer}}
