--- a/views/partials/cartList.hbs
+++ b/views/partials/cartList.hbs
@@ -33,7 +33,7 @@
     try {
       const res = await fetch(URL , requestOptions)
     } catch(e) {
-      console.log("e::: ", e);
+      console.log("Error");
     }
   }
 
@@ -50,7 +50,7 @@
     try {
       await fetch(URL, requestOptions)
     } catch(e) {
-      console.log('e::: ', e);
+      console.log("Error");
     }
   }
 
