--- a/views/partials/prodCreateForm.hbs
+++ b/views/partials/prodCreateForm.hbs
@@ -111,7 +111,7 @@
     try {
       await fetch(URL, requestOptions)
     } catch(e) {
-      console.log("error ", e);
+      console.log("Error");
     }
   }
 </script>
