--- a/views/partials/prodEditForm.hbs
+++ b/views/partials/prodEditForm.hbs
@@ -120,7 +120,7 @@
     try {
     const res = await fetch(URL, requestOptions)
     } catch(e) {
-      console.log("error ", e);
+      console.log("Error");
     }
   }
 </script>
