--- a/views/partials/productsList.hbs
+++ b/views/partials/productsList.hbs
@@ -62,7 +62,7 @@
     try {
       await fetch(URL, requestOptions)
    } catch(e) {
-      console.log("e::: ", e);
+      console.log("Error");
    }
   }
 </script>
