--- a/public/styles.css
+++ b/public/styles.css
@@ -175,7 +175,7 @@
   margin: 1rem 0;
 }
 .cart-list {
-  width: 35vw;
+  width: 60vw;
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -196,11 +196,17 @@
   border-radius: 0 1rem/1rem;
   box-shadow: 0.3rem 0.3rem darkviolet;
   padding: 0.2rem;
+  font-size: 1.1rem;
 }
 .empty-cart {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 3rem 20rem;
+  gap: 2rem;
+  border: solid 0.3rem lightgray;
+  padding: 2rem 0rem;
+  border-radius: 2rem 0;
 }
 
 /* MI BOTON */
