Cantidades de productos en cart fix

--- a/views/partials/cartList.hbs
+++ b/views/partials/cartList.hbs
@@ -21,7 +21,7 @@
   <form action="/carrito" method="POST">
     <button type="submit" class="btn">Comprar</button>
   </form>
-  <form id="clearCartForm" {{!-- action="/carrito" --}} onsubmit="clearCart()">
+  <form id="clearCartForm" onsubmit="clearCart()">
     <button type="submit" class="btn">Vaciar carrito</button>
   </form>
   
