--- a/views/partials/prodView.hbs
+++ b/views/partials/prodView.hbs
@@ -10,7 +10,7 @@
 
       <div class="counter-container">
         <h4>Cantidad</h4>
-        <input type="number" name="quantity" id="quantity" class="quantity-input" value="1" max="{{this.stock}}">
+        <input type="number" name="quantity" id="quantity" class="quantity-input" value="1" max="{{this.stock}}" min="1">
       </div>
 
       <form onsubmit="addToCart()">
